--- a/packages/transit/static/style/transit.css
+++ b/packages/transit/static/style/transit.css
@@ -487,7 +487,7 @@ span.commute-time {
 .mode-choice {
   background: white;
   padding: 15px;
-  overflow-x: auto;
+  /* overflow-x: auto; */
 }
 
 .nav-bottom {
