--- a/packages/transit/static/style/transit.css
+++ b/packages/transit/static/style/transit.css
@@ -347,32 +347,33 @@ span.commute-time {
 
 .origin-destination {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
 }
 
 .origin-destination > img {
   margin-right: 1em;
+  flex: 19px 0 0;
 }
 
 .input-box-addon {
   position: relative;
   padding: 0;
   margin: 0;
+  flex: 1;
 }
 
 .origin-destination-search-box {
-  padding-left: 8px;
+  padding: 8px;
   background-color: #f8f8f8;
   padding-right: 30px;
   font-family: Montserrat;
-  font-size: 1 1px;
-  font-weight: 600;
+  font-size: 12px;
   font-style: normal;
   font-stretch: normal;
   line-height: normal;
   letter-spacing: normal;
-  color: #c8c8c8;
+  color: #333333;
+  border: 0;
+  width: 100%;
 }
 
 .input-box-addon > img {
