adding tooltip for compare button

--- a/packages/transit/static/style/transit.css
+++ b/packages/transit/static/style/transit.css
@@ -820,3 +820,7 @@ button.slick-disabled {
     display: none; /* make the legend a bit shorter */
   }
 }
+
+.mdl-tooltip {
+  min-width: 120px;
+}
